# taohua.nvim

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: makefile.yml
lua/: init.lua
plugin/: taohua.lua
src/: lib.rs
tests/: headless.rs  run_test.lua
tests/expected/: cunninghares.lua  error.lua  pyproject.lua  simple.lua
tests/fixtures/: cunninghares.toml  error.toml  pyproject.toml  simple.toml
